# rules_proto_grpc

modules/csharp/: BUILD.bazel  MODULE.bazel  csharp_grpc_compile.bzl  csharp_grpc_library.bzl  csharp_proto_compile.bzl  csharp_proto_library.bzl  paket.dependencies  paket2bazel.sh
modules/csharp/example/proto/: BUILD.bazel
modules/csharp/example/routeguide/: BUILD.bazel
modules/csharp/paket/: paket.grpc_csharp_dependencies.bzl  paket.grpc_csharp_dependencies_extension.bzl  paket.grpc_csharp_dev_dependencies.bzl  paket.grpc_csharp_dev_dependencies_extension.bzl
